; ModuleID = '/home/carl/AnghaBench/borg/src/borg/algorithms/zstd/lib/compress/extr_zstd_compress.c_ZSTD_minGain.c'
source_filename = "/home/carl/AnghaBench/borg/src/borg/algorithms/zstd/lib/compress/extr_zstd_compress.c_ZSTD_minGain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZSTD_btultra = common dso_local global i32 0, align 4
@ZSTD_c_strategy = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i32)* @ZSTD_minGain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ZSTD_minGain(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @ZSTD_btultra, align 4
  %8 = icmp sge i32 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = sub nsw i32 %10, 1
  br label %13

12:                                               ; preds = %2
  br label %13

13:                                               ; preds = %12, %9
  %14 = phi i32 [ %11, %9 ], [ 6, %12 ]
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* @ZSTD_btultra, align 4
  %16 = icmp eq i32 %15, 8
  %17 = zext i1 %16 to i32
  %18 = call i32 @ZSTD_STATIC_ASSERT(i32 %17)
  %19 = load i32, i32* @ZSTD_c_strategy, align 4
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @ZSTD_cParam_withinBounds(i32 %19, i32 %20)
  %22 = call i32 @assert(i32 %21)
  %23 = load i64, i64* %3, align 8
  %24 = load i32, i32* %5, align 4
  %25 = zext i32 %24 to i64
  %26 = lshr i64 %23, %25
  %27 = add i64 %26, 2
  ret i64 %27
}

declare dso_local i32 @ZSTD_STATIC_ASSERT(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @ZSTD_cParam_withinBounds(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
